Fix UserMessage::transform to only call shouldTransform once https://bugs.webkit.org/show_bug.cgi?id=139911

Reviewed by Sam Weinig.

Also, make it possible for transformers to return null objects and change the transformers
to return the passed in object when there's no need to do a transform.

* Shared/UserData.cpp:
(WebKit::transformGraph):
(WebKit::UserData::transform):
(WebKit::UserData::encode): Deleted.
(WebKit::UserData::decode): Deleted.
* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::apiObjectByConvertingToHandles):
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::apiObjectByConvertingFromHandles):

Canonical link: https://commits.webkit.org/157851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177693 268f45cc-cd09-0410-ab3c-d52691b4dbfc